// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/users/_id/index.vue { locale: "en" } snapshot test renders correctly 1`] = `
<section class="section">
  <h1 class="title">User 1</h1>
  <h2 class="subtitle">Tokyo / 1234-5678</h2>
  <div class="buttons"><a type="button" class="button is-success"><span class="icon is-small"><i class="mdi mdi-magnify"></i></span><span>
        Score List
      </span>
      <!---->
    </a>
    <!---->
  </div>
  <section class="section">
    <div class="content columns is-multiline">
      <section class="column is-half-tablet">
        <div class="collapse card">
          <div class="collapse-trigger">
            <header role="button" aria-controls="Groove Radar (SP)" class="card-header is-primary">
              <div class="card-header-title">Groove Radar (SP)</div> <a class="card-header-icon"><span class="icon"><i class="mdi mdi-menu-up mdi-24px"></i></span></a>
            </header>
          </div>
          <transition-stub name="slide">
            <div id="Groove Radar (SP)" class="collapse-content" style="display: none;">
              <div class="card-content">
                <grooveradar-stub chart="[object Object]" class="chart"></grooveradar-stub>
              </div>
            </div>
          </transition-stub>
        </div>
      </section>
      <section class="column is-half-tablet">
        <div class="collapse card">
          <div class="collapse-trigger">
            <header role="button" aria-controls="Groove Radar (DP)" class="card-header is-primary">
              <div class="card-header-title">Groove Radar (DP)</div> <a class="card-header-icon"><span class="icon"><i class="mdi mdi-menu-up mdi-24px"></i></span></a>
            </header>
          </div>
          <transition-stub name="slide">
            <div id="Groove Radar (DP)" class="collapse-content" style="display: none;">
              <div class="card-content">
                <grooveradar-stub chart="[object Object]" class="chart"></grooveradar-stub>
              </div>
            </div>
          </transition-stub>
        </div>
      </section>
    </div>
    <div class="content columns is-multiline">
      <section class="column is-half-widescreen">
        <div class="collapse card">
          <div class="collapse-trigger">
            <header role="button" aria-controls="Clear Status (SP)" class="card-header is-primary">
              <div class="card-header-title">Clear Status (SP)</div> <a class="card-header-icon"><span class="icon"><i class="mdi mdi-menu-up mdi-24px"></i></span></a>
            </header>
          </div>
          <transition-stub name="slide">
            <div id="Clear Status (SP)" class="collapse-content" style="display: none;">
              <div class="card-content">
                <clearstatus-stub statuses="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"></clearstatus-stub>
              </div>
            </div>
          </transition-stub>
        </div>
      </section>
      <section class="column is-half-widescreen">
        <div class="collapse card">
          <div class="collapse-trigger">
            <header role="button" aria-controls="Clear Status (DP)" class="card-header is-primary">
              <div class="card-header-title">Clear Status (DP)</div> <a class="card-header-icon"><span class="icon"><i class="mdi mdi-menu-up mdi-24px"></i></span></a>
            </header>
          </div>
          <transition-stub name="slide">
            <div id="Clear Status (DP)" class="collapse-content" style="display: none;">
              <div class="card-content">
                <clearstatus-stub statuses="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"></clearstatus-stub>
              </div>
            </div>
          </transition-stub>
        </div>
      </section>
    </div>
  </section>
</section>
`;

exports[`/users/_id/index.vue { locale: "en" } snapshot test renders empty if no data 1`] = `<section class="section">User does not exist or is private</section>`;

exports[`/users/_id/index.vue { locale: "en" } snapshot test renders loading before fetch() 1`] = `
<section class="section">
  <div class="b-skeleton is-animated">
    <div class="b-skeleton-item is-rounded"></div>
  </div>
  <div class="b-skeleton is-animated">
    <div class="b-skeleton-item is-rounded"></div>
  </div>
</section>
`;

exports[`/users/_id/index.vue { locale: "en" } snapshot test renders setting button if selfPage 1`] = `
<section class="section">
  <h1 class="title">User 1</h1>
  <h2 class="subtitle">Tokyo / 1234-5678</h2>
  <div class="buttons"><a type="button" class="button is-success"><span class="icon is-small"><i class="mdi mdi-magnify"></i></span><span>
        Score List
      </span>
      <!---->
    </a> <a type="button" class="button is-primary"><span class="icon is-small"><i class="mdi mdi-import"></i></span><span>
          Import Scores
        </span>
      <!---->
    </a> <a type="button" class="button is-info"><span class="icon is-small"><i class="mdi mdi-account-cog"></i></span><span>
          Settings
        </span>
      <!---->
    </a></div>
  <section class="section">
    <div class="content columns is-multiline">
      <section class="column is-half-tablet">
        <div class="collapse card">
          <div class="collapse-trigger">
            <header role="button" aria-controls="Groove Radar (SP)" class="card-header is-primary">
              <div class="card-header-title">Groove Radar (SP)</div> <a class="card-header-icon"><span class="icon"><i class="mdi mdi-menu-up mdi-24px"></i></span></a>
            </header>
          </div>
          <transition-stub name="slide">
            <div id="Groove Radar (SP)" class="collapse-content" style="display: none;">
              <div class="card-content">
                <grooveradar-stub chart="[object Object]" class="chart"></grooveradar-stub>
              </div>
            </div>
          </transition-stub>
        </div>
      </section>
      <section class="column is-half-tablet">
        <div class="collapse card">
          <div class="collapse-trigger">
            <header role="button" aria-controls="Groove Radar (DP)" class="card-header is-primary">
              <div class="card-header-title">Groove Radar (DP)</div> <a class="card-header-icon"><span class="icon"><i class="mdi mdi-menu-up mdi-24px"></i></span></a>
            </header>
          </div>
          <transition-stub name="slide">
            <div id="Groove Radar (DP)" class="collapse-content" style="display: none;">
              <div class="card-content">
                <grooveradar-stub chart="[object Object]" class="chart"></grooveradar-stub>
              </div>
            </div>
          </transition-stub>
        </div>
      </section>
    </div>
    <div class="content columns is-multiline">
      <section class="column is-half-widescreen">
        <div class="collapse card">
          <div class="collapse-trigger">
            <header role="button" aria-controls="Clear Status (SP)" class="card-header is-primary">
              <div class="card-header-title">Clear Status (SP)</div> <a class="card-header-icon"><span class="icon"><i class="mdi mdi-menu-up mdi-24px"></i></span></a>
            </header>
          </div>
          <transition-stub name="slide">
            <div id="Clear Status (SP)" class="collapse-content" style="display: none;">
              <div class="card-content">
                <clearstatus-stub statuses="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"></clearstatus-stub>
              </div>
            </div>
          </transition-stub>
        </div>
      </section>
      <section class="column is-half-widescreen">
        <div class="collapse card">
          <div class="collapse-trigger">
            <header role="button" aria-controls="Clear Status (DP)" class="card-header is-primary">
              <div class="card-header-title">Clear Status (DP)</div> <a class="card-header-icon"><span class="icon"><i class="mdi mdi-menu-up mdi-24px"></i></span></a>
            </header>
          </div>
          <transition-stub name="slide">
            <div id="Clear Status (DP)" class="collapse-content" style="display: none;">
              <div class="card-content">
                <clearstatus-stub statuses="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"></clearstatus-stub>
              </div>
            </div>
          </transition-stub>
        </div>
      </section>
    </div>
  </section>
</section>
`;

exports[`/users/_id/index.vue { locale: "ja" } snapshot test renders correctly 1`] = `
<section class="section">
  <h1 class="title">User 1</h1>
  <h2 class="subtitle">東京都 / 1234-5678</h2>
  <div class="buttons"><a type="button" class="button is-success"><span class="icon is-small"><i class="mdi mdi-magnify"></i></span><span>
        スコア一覧
      </span>
      <!---->
    </a>
    <!---->
  </div>
  <section class="section">
    <div class="content columns is-multiline">
      <section class="column is-half-tablet">
        <div class="collapse card">
          <div class="collapse-trigger">
            <header role="button" aria-controls="グルーブレーダー (SP)" class="card-header is-primary">
              <div class="card-header-title">グルーブレーダー (SP)</div> <a class="card-header-icon"><span class="icon"><i class="mdi mdi-menu-up mdi-24px"></i></span></a>
            </header>
          </div>
          <transition-stub name="slide">
            <div id="グルーブレーダー (SP)" class="collapse-content" style="display: none;">
              <div class="card-content">
                <grooveradar-stub chart="[object Object]" class="chart"></grooveradar-stub>
              </div>
            </div>
          </transition-stub>
        </div>
      </section>
      <section class="column is-half-tablet">
        <div class="collapse card">
          <div class="collapse-trigger">
            <header role="button" aria-controls="グルーブレーダー (DP)" class="card-header is-primary">
              <div class="card-header-title">グルーブレーダー (DP)</div> <a class="card-header-icon"><span class="icon"><i class="mdi mdi-menu-up mdi-24px"></i></span></a>
            </header>
          </div>
          <transition-stub name="slide">
            <div id="グルーブレーダー (DP)" class="collapse-content" style="display: none;">
              <div class="card-content">
                <grooveradar-stub chart="[object Object]" class="chart"></grooveradar-stub>
              </div>
            </div>
          </transition-stub>
        </div>
      </section>
    </div>
    <div class="content columns is-multiline">
      <section class="column is-half-widescreen">
        <div class="collapse card">
          <div class="collapse-trigger">
            <header role="button" aria-controls="クリア状況 (SP)" class="card-header is-primary">
              <div class="card-header-title">クリア状況 (SP)</div> <a class="card-header-icon"><span class="icon"><i class="mdi mdi-menu-up mdi-24px"></i></span></a>
            </header>
          </div>
          <transition-stub name="slide">
            <div id="クリア状況 (SP)" class="collapse-content" style="display: none;">
              <div class="card-content">
                <clearstatus-stub statuses="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"></clearstatus-stub>
              </div>
            </div>
          </transition-stub>
        </div>
      </section>
      <section class="column is-half-widescreen">
        <div class="collapse card">
          <div class="collapse-trigger">
            <header role="button" aria-controls="クリア状況 (DP)" class="card-header is-primary">
              <div class="card-header-title">クリア状況 (DP)</div> <a class="card-header-icon"><span class="icon"><i class="mdi mdi-menu-up mdi-24px"></i></span></a>
            </header>
          </div>
          <transition-stub name="slide">
            <div id="クリア状況 (DP)" class="collapse-content" style="display: none;">
              <div class="card-content">
                <clearstatus-stub statuses="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"></clearstatus-stub>
              </div>
            </div>
          </transition-stub>
        </div>
      </section>
    </div>
  </section>
</section>
`;

exports[`/users/_id/index.vue { locale: "ja" } snapshot test renders empty if no data 1`] = `<section class="section">ユーザーが存在しないか、非公開に設定されています。</section>`;

exports[`/users/_id/index.vue { locale: "ja" } snapshot test renders loading before fetch() 1`] = `
<section class="section">
  <div class="b-skeleton is-animated">
    <div class="b-skeleton-item is-rounded"></div>
  </div>
  <div class="b-skeleton is-animated">
    <div class="b-skeleton-item is-rounded"></div>
  </div>
</section>
`;

exports[`/users/_id/index.vue { locale: "ja" } snapshot test renders setting button if selfPage 1`] = `
<section class="section">
  <h1 class="title">User 1</h1>
  <h2 class="subtitle">東京都 / 1234-5678</h2>
  <div class="buttons"><a type="button" class="button is-success"><span class="icon is-small"><i class="mdi mdi-magnify"></i></span><span>
        スコア一覧
      </span>
      <!---->
    </a> <a type="button" class="button is-primary"><span class="icon is-small"><i class="mdi mdi-import"></i></span><span>
          スコアのインポート
        </span>
      <!---->
    </a> <a type="button" class="button is-info"><span class="icon is-small"><i class="mdi mdi-account-cog"></i></span><span>
          設定
        </span>
      <!---->
    </a></div>
  <section class="section">
    <div class="content columns is-multiline">
      <section class="column is-half-tablet">
        <div class="collapse card">
          <div class="collapse-trigger">
            <header role="button" aria-controls="グルーブレーダー (SP)" class="card-header is-primary">
              <div class="card-header-title">グルーブレーダー (SP)</div> <a class="card-header-icon"><span class="icon"><i class="mdi mdi-menu-up mdi-24px"></i></span></a>
            </header>
          </div>
          <transition-stub name="slide">
            <div id="グルーブレーダー (SP)" class="collapse-content" style="display: none;">
              <div class="card-content">
                <grooveradar-stub chart="[object Object]" class="chart"></grooveradar-stub>
              </div>
            </div>
          </transition-stub>
        </div>
      </section>
      <section class="column is-half-tablet">
        <div class="collapse card">
          <div class="collapse-trigger">
            <header role="button" aria-controls="グルーブレーダー (DP)" class="card-header is-primary">
              <div class="card-header-title">グルーブレーダー (DP)</div> <a class="card-header-icon"><span class="icon"><i class="mdi mdi-menu-up mdi-24px"></i></span></a>
            </header>
          </div>
          <transition-stub name="slide">
            <div id="グルーブレーダー (DP)" class="collapse-content" style="display: none;">
              <div class="card-content">
                <grooveradar-stub chart="[object Object]" class="chart"></grooveradar-stub>
              </div>
            </div>
          </transition-stub>
        </div>
      </section>
    </div>
    <div class="content columns is-multiline">
      <section class="column is-half-widescreen">
        <div class="collapse card">
          <div class="collapse-trigger">
            <header role="button" aria-controls="クリア状況 (SP)" class="card-header is-primary">
              <div class="card-header-title">クリア状況 (SP)</div> <a class="card-header-icon"><span class="icon"><i class="mdi mdi-menu-up mdi-24px"></i></span></a>
            </header>
          </div>
          <transition-stub name="slide">
            <div id="クリア状況 (SP)" class="collapse-content" style="display: none;">
              <div class="card-content">
                <clearstatus-stub statuses="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"></clearstatus-stub>
              </div>
            </div>
          </transition-stub>
        </div>
      </section>
      <section class="column is-half-widescreen">
        <div class="collapse card">
          <div class="collapse-trigger">
            <header role="button" aria-controls="クリア状況 (DP)" class="card-header is-primary">
              <div class="card-header-title">クリア状況 (DP)</div> <a class="card-header-icon"><span class="icon"><i class="mdi mdi-menu-up mdi-24px"></i></span></a>
            </header>
          </div>
          <transition-stub name="slide">
            <div id="クリア状況 (DP)" class="collapse-content" style="display: none;">
              <div class="card-content">
                <clearstatus-stub statuses="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"></clearstatus-stub>
              </div>
            </div>
          </transition-stub>
        </div>
      </section>
    </div>
  </section>
</section>
`;
